Changes
=======

2.2 (unreleased)
----------------

- Nothing changed yet.


2.1 (2018-03-28)
----------------

- zodblinks has now an option to find what is the shortest relation
  chain between two objects in the database.

2.0 (2018-02-13)
----------------

- Support for Python 3.

- Add a family of tools that work directly with Postgres, bypassing
  the ZODB layer, and support multi-processing.

- Add support to run zodbupdate directly against a Postgres database.


1.0 (2018-01-19)
----------------

- Initial release, split off from the zodbbrowser fork.